--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "teamprofilegenerator",
+  "name": "unit10hw",
   "version": "1.0.0",
   "description": "OOP and testing for week 10 homework",
   "main": "app.js",
@@ -8,20 +8,23 @@
     "test": "test"
   },
   "scripts": {
-    "test": "jest --verbose test/*"
+    "test": "jest --verbose test/*",
+    "start": "node ./app.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stevetrilogy/unit10hw.git"
   },
-  "author": "Jordan Kirby",
+  "author": "",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/stevetrilogy/unit10hw/issues"
   },
   "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
   "dependencies": {
-    "inquirer": "^6.3.1"
+    "ejs": "^3.0.1",
+    "inquirer": "^6.3.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "jest": "^24.8.0"
