--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "unit10hw",
+  "name": "Jordan-Kirby",
   "version": "1.0.0",
-  "description": "OOP and testing for week 10 homework",
+  "description": "Team profile generater",
   "main": "app.js",
   "directories": {
     "lib": "lib",
@@ -13,14 +13,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
+    "url": "git+https://github.com/Feizhi255/Team-Profile-Generator"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/stevetrilogy/unit10hw/issues"
+    "url": "https://github.com/Feizhi255/Team-Profile-Generator/issues"
   },
-  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "homepage": "https://github.com/Feizhi255/Team-Profile-Generator#readme",
   "dependencies": {
     "ejs": "^3.0.1",
     "inquirer": "^6.3.1",
